# risk_management

./: README.org  absorptio_ratio_french_data.py  absorption_ratio.py  brinson.py  get_portfolio.py  get_recessions.py  get_sp500.py  mixture_models.py  plots.py  portfolio_measures.py  pyproject.toml  ratios.py
figures/: absorption_ratio_french_data_2000s.html  hmm_regime_change.html  sharpe_ratio.html  sortino_ratio.html
